Changes in patient html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
     <input class="user" type="text" name="username" placeholder="Username"><br>
     <input class="pass" type="password" name="password" placeholder="Password"><br>
-    <button class="btn"><a href="/patient.html">Submit</a></button>
+    <button class="btn"><a href="patient.html">Submit</a></button>
 </div>
 </body>
 </html>
